--- a/angular.json
+++ b/angular.json
@@ -9,9 +9,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/frontend-sd",
             "index": "apps/frontend-sd/src/index.html",
@@ -90,9 +88,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/frontend-sd"
-          ],
+          "outputs": ["coverage/apps/frontend-sd"],
           "options": {
             "jestConfig": "apps/frontend-sd/jest.config.js",
             "passWithNoTests": true
@@ -120,20 +116,132 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/frontend-sd-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/frontend-sd-e2e/**/*.{js,ts}"]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": [
-        "frontend-sd"
-      ]
+      "implicitDependencies": ["frontend-sd"]
+    },
+    "parent": {
+      "projectType": "application",
+      "root": "apps/parent",
+      "sourceRoot": "apps/parent/src",
+      "prefix": "frontend-sd",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/parent",
+            "index": "apps/parent/src/index.html",
+            "main": "apps/parent/src/main.ts",
+            "polyfills": "apps/parent/src/polyfills.ts",
+            "tsConfig": "apps/parent/tsconfig.app.json",
+            "assets": ["apps/parent/src/favicon.ico", "apps/parent/src/assets"],
+            "styles": ["apps/parent/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/parent/src/environments/environment.ts",
+                  "with": "apps/parent/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "parent:build:production"
+            },
+            "development": {
+              "browserTarget": "parent:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "parent:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/parent/src/**/*.ts",
+              "apps/parent/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/parent"],
+          "options": {
+            "jestConfig": "apps/parent/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "parent-e2e": {
+      "root": "apps/parent-e2e",
+      "sourceRoot": "apps/parent-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/parent-e2e/cypress.json",
+            "devServerTarget": "parent:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "parent:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/parent-e2e/**/*.{js,ts}"]
+          }
+        }
+      },
+      "tags": [],
+      "implicitDependencies": ["parent"]
     },
     "student": {
       "projectType": "application",
@@ -143,9 +251,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/student",
             "index": "apps/student/src/index.html",
@@ -156,9 +262,7 @@
               "apps/student/src/favicon.ico",
               "apps/student/src/assets"
             ],
-            "styles": [
-              "apps/student/src/styles.css"
-            ],
+            "styles": ["apps/student/src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -223,9 +327,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/student"
-          ],
+          "outputs": ["coverage/apps/student"],
           "options": {
             "jestConfig": "apps/student/jest.config.js",
             "passWithNoTests": true
@@ -253,20 +355,135 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/student-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/student-e2e/**/*.{js,ts}"]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": [
-        "student"
-      ]
+      "implicitDependencies": ["student"]
+    },
+    "teacher": {
+      "projectType": "application",
+      "root": "apps/teacher",
+      "sourceRoot": "apps/teacher/src",
+      "prefix": "frontend-sd",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/teacher",
+            "index": "apps/teacher/src/index.html",
+            "main": "apps/teacher/src/main.ts",
+            "polyfills": "apps/teacher/src/polyfills.ts",
+            "tsConfig": "apps/teacher/tsconfig.app.json",
+            "assets": [
+              "apps/teacher/src/favicon.ico",
+              "apps/teacher/src/assets"
+            ],
+            "styles": ["apps/teacher/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/teacher/src/environments/environment.ts",
+                  "with": "apps/teacher/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "teacher:build:production"
+            },
+            "development": {
+              "browserTarget": "teacher:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "teacher:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/teacher/src/**/*.ts",
+              "apps/teacher/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/teacher"],
+          "options": {
+            "jestConfig": "apps/teacher/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "teacher-e2e": {
+      "root": "apps/teacher-e2e",
+      "sourceRoot": "apps/teacher-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/teacher-e2e/cypress.json",
+            "devServerTarget": "teacher:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "teacher:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/teacher-e2e/**/*.{js,ts}"]
+          }
+        }
+      },
+      "tags": [],
+      "implicitDependencies": ["teacher"]
     }
   }
 }
