--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf": "^2.5.0",
     "moment": "^2.29.1",
     "ng2-charts": "^3.0.6",
+    "ngx-spinner": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
